--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="note_activity">Note</string>
     <string name="note_title_hint">Title</string>
     <string name="note_hint">Your Note</string>
+    <string name="note_color">Change Color</string>
+    <string name="choose_color_message">Choose Color</string>
 </resources>
