#54 Menu item, listener and finishing activity (without actual removing)

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="note_hint">Your Note</string>
     <string name="note_color">Change Color</string>
     <string name="choose_color_message">Choose Color</string>
+    <string name="note_remove">Remove Note</string>
 </resources>
