--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="drawer_open">Open</string>
     <string name="drawer_close">Close</string>
     <string name="note_new">New Note</string>
-    <string name="options">Options</string>
+    <string name="settings">Settings</string>
     <string name="note_activity">Note</string>
     <string name="note_title_hint">Title</string>
     <string name="note_hint">Your Note</string>
