--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="drawer_close">Close</string>
     <string name="note_new">New Note</string>
     <string name="settings">Settings</string>
-    <string name="note_activity">Note</string>
+    <string name="activity_note">Note</string>
     <string name="note_title_hint">Title</string>
     <string name="note_hint">Your Note</string>
     <string name="note_color">Change color</string>
@@ -29,4 +29,6 @@
     <string name="note_undrafted">Marked as not a draft.</string>
     <string name="preference_title_export">Export</string>
     <string name="preference_summary_export">Save all your notes on external storage</string>
+    <string name="prefkey_export">export</string>
+    <string name="activity_settings">Settings</string>
 </resources>
