--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,10 +25,15 @@
     <string name="note_star">Star</string>
     <string name="note_starred">Starred</string>
     <string name="note_unstarred">Unstarred</string>
-    <string name="note_drafted">Marked as a draft.</string>
-    <string name="note_undrafted">Marked as not a draft.</string>
+    <string name="toast_note_drafted">Marked as a draft.</string>
+    <string name="toast_note_undrafted">Marked as not a draft.</string>
     <string name="preference_title_export">Export</string>
     <string name="preference_summary_export">Save all your notes on external storage</string>
     <string name="prefkey_export">export</string>
     <string name="activity_settings">Settings</string>
+    <string name="toast_cancelled">Cancelled.</string>
+    <string name="progress_title_export">Exporting</string>
+    <string name="toast_export_finished">Notes are exported to %s</string>
+    <string name="toast_export_starting">Starting…</string>
+    <string name="export_writer_title_txt">plain text</string>
 </resources>
