--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,55 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Miary</string>
-    <string name="drawer_open">Open</string>
-    <string name="drawer_close">Close</string>
-    <string name="note_new">New Note</string>
-    <string name="settings">Settings</string>
     <string name="activity_note">Note</string>
-    <string name="note_title_hint">Title</string>
-    <string name="note_hint">Your Note</string>
-    <string name="note_color">Change color</string>
-    <string name="dialog_colorpicker_title">Choose Color</string>
-    <string name="note_remove">Remove note</string>
+    <string name="activity_settings">Settings</string>
+    <string name="app_name">Miary</string>
     <string name="button_remove">Remove</string>
-    <string name="dialog_remove_note_title">Remove note?</string>
+    <string name="dialog_colorpicker_title">Choose Color</string>
     <string name="dialog_remove_note_message">It will be impossible to restore.</string>
-    <string name="note_removed">The note is removed.</string>
+    <string name="dialog_remove_note_title">Remove note?</string>
+    <string name="dialog_replacement_list_title">Replacement List</string>
+    <string name="drawer_close">Close</string>
+    <string name="drawer_item_drafts">Drafts</string>
     <string name="drawer_item_feed">Feed</string>
     <string name="drawer_item_starred">Starred</string>
-    <string name="drawer_item_drafts">Drafts</string>
-    <string name="feed_empty">No notes here yet.\nTap «New Note» to write a note.</string>
-    <string name="note_draft">Mark as a draft</string>
-    <string name="note_not_draft">Mark as not a draft</string>
-    <string name="note_unstar">Unstar</string>
-    <string name="note_star">Star</string>
-    <string name="toast_starred">Starred.</string>
-    <string name="toast_unstarred">Unstarred.</string>
-    <string name="toast_note_drafted">Marked as a draft.</string>
-    <string name="toast_note_undrafted">Marked as not a draft.</string>
-    <string name="preference_title_export">Export</string>
-    <string name="preference_summary_export">Save all your notes on external storage</string>
-    <string name="prefkey_export">export</string>
-    <string name="activity_settings">Settings</string>
-    <string name="toast_cancelled">Cancelled.</string>
-    <string name="progress_title_export">Exporting</string>
-    <string name="toast_export_finished" formatted="false">%s notes are exported to %s</string>
+    <string name="drawer_open">Open</string>
+    <string name="export_message_progress">Exporting to %s</string>
     <string name="export_message_starting">Starting…</string>
     <string name="export_writer_title_txt">plain text</string>
-    <string name="export_message_progress">Exporting to %s</string>
-    <string name="toast_export_nothing">Nothing to export.</string>
+    <string name="feed_empty">No notes here yet.\nTap «New Note» to write a note.</string>
+    <string name="note_color">Change color</string>
+    <string name="note_draft">Mark as a draft</string>
+    <string name="note_hint">Your Note</string>
+    <string name="note_new">New Note</string>
+    <string name="note_not_draft">Mark as not a draft</string>
+    <string name="note_remove">Remove note</string>
+    <string name="note_removed">The note is removed.</string>
+    <string name="note_star">Star</string>
+    <string name="note_title_hint">Title</string>
+    <string name="note_unstar">Unstar</string>
     <string name="prefcat_title_account">Account</string>
-    <string name="prefcat_title_substitution">Automatic Substitution</string>
-    <string name="preference_title_enabled">Enabled</string>
-    <string name="prefkey_substitution_enabled">substitution_enabled</string>
-    <string name="preference_summary_substitution">Automatically replaces the sequence of characters with a single character</string>
-    <string name="prefkey_substitution_list">substitution_list</string>
-    <string name="preference_title_substitution_list">View replacement table</string>
-    <string name="prefcat_title_security">Security</string>
-    <string name="prefkey_pin_enabled">pin_enabled</string>
-    <string name="preference_title_pin_enabled">PIN-code protection</string>
-    <string name="preference_summary_pin">Ask a security passcode to access your notes</string>
     <string name="prefcat_title_reminder">Reminder</string>
-    <string name="prefkey_reminder_enabled">reminder_enabled</string>
+    <string name="prefcat_title_security">Security</string>
+    <string name="prefcat_title_substitution">Automatic Substitution</string>
+    <string name="preference_summary_export">Save all your notes on external storage</string>
+    <string name="preference_summary_pin">Ask a security passcode to access your notes</string>
     <string name="preference_summary_reminder">Periodically remind you to write a note</string>
+    <string name="preference_summary_substitution">Automatically replaces the sequence of characters with a single character</string>
+    <string name="preference_title_enabled">Enabled</string>
+    <string name="preference_title_export">Export</string>
+    <string name="preference_title_pin_enabled">PIN-code protection</string>
+    <string name="preference_title_substitution_list">View replacement table</string>
+    <string name="prefkey_export">export</string>
+    <string name="prefkey_pin_enabled">pin_enabled</string>
+    <string name="prefkey_reminder_enabled">reminder_enabled</string>
+    <string name="prefkey_substitution_enabled">substitution_enabled</string>
+    <string name="prefkey_substitution_list">substitution_list</string>
+    <string name="progress_title_export">Exporting</string>
+    <string name="settings">Settings</string>
+    <string name="toast_cancelled">Cancelled.</string>
+    <string name="toast_export_finished" formatted="false">%s notes are exported to %s</string>
+    <string name="toast_export_nothing">Nothing to export.</string>
+    <string name="toast_note_drafted">Marked as a draft.</string>
+    <string name="toast_note_undrafted">Marked as not a draft.</string>
+    <string name="toast_starred">Starred.</string>
+    <string name="toast_unstarred">Unstarred.</string>
 </resources>
