--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="dialog_colorpicker_title">Choose Color</string>
     <string name="dialog_remove_note_message">It will be impossible to restore.</string>
     <string name="dialog_remove_note_title">Remove note?</string>
-    <string name="dialog_replacement_list_title">Replacement List</string>
+    <string name="dialog_replacement_table_title">Replacement Table</string>
     <string name="drawer_close">Close</string>
     <string name="drawer_item_drafts">Drafts</string>
     <string name="drawer_item_feed">Feed</string>
@@ -38,12 +38,12 @@
     <string name="preference_title_enabled">Enabled</string>
     <string name="preference_title_export">Export</string>
     <string name="preference_title_pin_enabled">PIN-code protection</string>
-    <string name="preference_title_substitution_list">View replacement table</string>
+    <string name="preference_title_substitution_table">View replacement table</string>
     <string name="prefkey_export">export</string>
     <string name="prefkey_pin_enabled">pin_enabled</string>
     <string name="prefkey_reminder_enabled">reminder_enabled</string>
     <string name="prefkey_substitution_enabled">substitution_enabled</string>
-    <string name="prefkey_substitution_list">substitution_list</string>
+    <string name="prefkey_substitution_table">substitution_table</string>
     <string name="progress_title_export">Exporting</string>
     <string name="settings">Settings</string>
     <string name="toast_cancelled">Cancelled.</string>
