--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -33,15 +33,21 @@
     <string name="prefcat_title_substitution">Automatic Substitution</string>
     <string name="preference_summary_export">Save all your notes on external storage.</string>
     <string name="preference_summary_pin">We\'ll ask security passcode after 5 minutes of inactivity.</string>
+    <string name="preference_summary_reminder_days">Select days of week when to remind you to write a note.</string>
+    <string name="preference_summary_reminder_time">Select time of reminding.</string>
     <string name="preference_summary_reminder">Periodically remind you to write a note.</string>
     <string name="preference_summary_substitution">Automatically replaces the sequence of characters with a single character.</string>
     <string name="preference_title_enabled">Enabled</string>
+    <string name="preference_title_reminder_days">Days of week</string>
+    <string name="preference_title_reminder_time">Time</string>
     <string name="preference_title_export">Export</string>
     <string name="preference_title_pin">Passcode protection</string>
     <string name="preference_title_substitution_table">View replacement table</string>
     <string name="prefkey_export">export</string>
     <string name="prefkey_pin_enabled">pin_enabled</string>
     <string name="prefkey_reminder_enabled">reminder_enabled</string>
+    <string name="prefkey_reminder_days">reminder_days</string>
+    <string name="prefkey_reminder_time">reminder_time</string>
     <string name="prefkey_substitution_enabled">substitution_enabled</string>
     <string name="prefkey_substitution_table">substitution_table</string>
     <string name="progress_title_export">Exporting</string>
@@ -66,6 +72,7 @@
     <string name="note_set_custom_date">Set date and time</string>
     <string name="note_reset_custom_date">Reset</string>
     <string name="dialog_custom_date_title">Set date and time</string>
+    <string name="dialog_reminder_days_title">Select days to remind</string>
     <string name="dialog_reminder_monday">Monday</string>
     <string name="dialog_reminder_tuesday">Tuesday</string>
     <string name="dialog_reminder_wednesday">Wednesday</string>
@@ -73,4 +80,6 @@
     <string name="dialog_reminder_friday">Friday</string>
     <string name="dialog_reminder_saturday">Saturday</string>
     <string name="dialog_reminder_sunday">Sunday</string>
+    <string name="dialog_reminder_time_title">Select time to remind</string>
+    <string name="notification_reminder_content_title">Create new note</string>
 </resources>
