--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -1,36 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="activity_note">Note</string>
-    <string name="activity_settings">Settings</string>
+    <string name="activity_note">Заметка</string>
+    <string name="activity_settings">Настройки</string>
     <string name="app_name">Miary</string>
-    <string name="button_remove">Remove</string>
+    <string name="button_remove">Удалить</string>
     <string name="dialog_colorpicker_title">Choose Color</string>
-    <string name="dialog_remove_note_message">It will be impossible to restore.</string>
-    <string name="dialog_remove_note_title">Remove note?</string>
+    <string name="dialog_remove_note_message">Удаленную заметку нельзя восстановить.</string>
+    <string name="dialog_remove_note_title">Удалить заметку?</string>
     <string name="dialog_replacement_table_title">Replacement Table</string>
-    <string name="drawer_close">Close</string>
-    <string name="drawer_item_drafts">Drafts</string>
-    <string name="drawer_item_feed">Feed</string>
-    <string name="drawer_item_starred">Starred</string>
-    <string name="drawer_open">Open</string>
+    <string name="drawer_close">Закрыть</string>
+    <string name="drawer_item_drafts">Черновики</string>
+    <string name="drawer_item_feed">Лента</string>
+    <string name="drawer_item_starred">Отмеченные</string>
+    <string name="drawer_open">Открыть</string>
     <string name="export_message_progress">Exporting to %s</string>
-    <string name="export_message_starting">Starting…</string>
-    <string name="export_writer_title_txt">plain text</string>
+    <string name="export_message_starting">Запуск…</string>
+    <string name="export_writer_title_txt">простой текст</string>
     <string name="feed_empty">No notes here yet.\nTap «New note» to write a note.</string>
     <string name="note_color">Change color</string>
     <string name="note_draft">Mark as a draft</string>
-    <string name="note_hint">Text</string>
-    <string name="note_new">New note</string>
+    <string name="note_hint">Текст</string>
+    <string name="note_new">Новая заметка</string>
     <string name="note_not_draft">Mark as not a draft</string>
-    <string name="note_remove">Remove note</string>
-    <string name="note_removed">The note is removed.</string>
+    <string name="note_remove">Удалить заметку</string>
+    <string name="note_removed">Заметка удалена.</string>
     <string name="note_star">Star</string>
-    <string name="note_title_hint">Title</string>
+    <string name="note_title_hint">Заголовок</string>
     <string name="note_unstar">Unstar</string>
-    <string name="prefcat_title_account">Account</string>
+    <string name="prefcat_title_account">Учетная запись</string>
     <string name="prefcat_title_reminder">Reminder</string>
     <string name="prefcat_title_security">Security</string>
-    <string name="prefcat_title_substitution">Automatic Substitution</string>
+    <string name="prefcat_title_substitution">Автоматическая замена</string>
     <string name="preference_summary_export">Save all your notes on external storage.</string>
     <string name="preference_summary_pin">We\'ll ask security passcode after 5 minutes of inactivity.</string>
     <string name="preference_summary_reminder">Periodically remind you to write a note.</string>
@@ -49,9 +49,9 @@
     <string name="prefkey_substitution_enabled">substitution_enabled</string>
     <string name="prefkey_substitution_table">substitution_table</string>
     <string name="progress_title_export">Exporting</string>
-    <string name="settings">Settings</string>
-    <string name="toast_cancelled">Cancelled.</string>
-    <string name="toast_export_finished" formatted="false">%s notes are exported to %s</string>
+    <string name="settings">Настройки</string>
+    <string name="toast_cancelled">Отменено.</string>
+    <string name="toast_export_finished" formatted="false">%s заметок сохранены в %s</string>
     <string name="toast_export_nothing">Nothing to export.</string>
     <string name="toast_note_drafted">Marked as a draft.</string>
     <string name="toast_note_undrafted">Marked as not a draft.</string>
@@ -60,7 +60,7 @@
     <string name="toast_storage_unready">External storage (memory card) is not ready.</string>
     <string name="activity_pin">Passcode Required</string>
     <string name="pin_required">Passcode</string>
-    <string name="app_subname">Personal Diary</string>
+    <string name="app_subname">Личный дневник</string>
     <string name="pin_incorrect">Incorrect passcode.</string>
     <string name="dialog_current_pin_title">Current passcode</string>
     <string name="pin_disabled">Passcode protection is disabled.</string>
@@ -71,14 +71,14 @@
     <string name="note_reset_custom_date">Reset</string>
     <string name="dialog_custom_date_title">Set date and time</string>
     <string name="dialog_reminder_days_title">Reminder days</string>
-    <string name="dialog_reminder_monday">Monday</string>
-    <string name="dialog_reminder_tuesday">Tuesday</string>
-    <string name="dialog_reminder_wednesday">Wednesday</string>
-    <string name="dialog_reminder_thursday">Thursday</string>
-    <string name="dialog_reminder_friday">Friday</string>
-    <string name="dialog_reminder_saturday">Saturday</string>
-    <string name="dialog_reminder_sunday">Sunday</string>
+    <string name="dialog_reminder_monday">Понедельник</string>
+    <string name="dialog_reminder_tuesday">Вторник</string>
+    <string name="dialog_reminder_wednesday">Среда</string>
+    <string name="dialog_reminder_thursday">Четверг</string>
+    <string name="dialog_reminder_friday">Пятница</string>
+    <string name="dialog_reminder_saturday">Суббота</string>
+    <string name="dialog_reminder_sunday">Воскресенье</string>
     <string name="dialog_reminder_time_title">Reminder time</string>
-    <string name="notification_reminder_content_text">It\'s time to write something.</string>
-    <string name="preference_summary_reminder_never">Never</string>
+    <string name="notification_reminder_content_text">Время что-нибудь написать.</string>
+    <string name="preference_summary_reminder_never">Никогда</string>
 </resources>
