#76 Localize some strings

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -4,43 +4,43 @@
     <string name="activity_settings">Настройки</string>
     <string name="app_name">Miary</string>
     <string name="button_remove">Удалить</string>
-    <string name="dialog_colorpicker_title">Choose Color</string>
+    <string name="dialog_colorpicker_title">Цвет</string>
     <string name="dialog_remove_note_message">Удаленную заметку нельзя восстановить.</string>
     <string name="dialog_remove_note_title">Удалить заметку?</string>
-    <string name="dialog_replacement_table_title">Replacement Table</string>
+    <string name="dialog_replacement_table_title">Таблица замены</string>
     <string name="drawer_close">Закрыть</string>
     <string name="drawer_item_drafts">Черновики</string>
     <string name="drawer_item_feed">Лента</string>
     <string name="drawer_item_starred">Отмеченные</string>
     <string name="drawer_open">Открыть</string>
-    <string name="export_message_progress">Exporting to %s</string>
+    <string name="export_message_progress">Экспорт в %s</string>
     <string name="export_message_starting">Запуск…</string>
     <string name="export_writer_title_txt">простой текст</string>
-    <string name="feed_empty">No notes here yet.\nTap «New note» to write a note.</string>
-    <string name="note_color">Change color</string>
-    <string name="note_draft">Mark as a draft</string>
+    <string name="feed_empty">Заметок нет.\nНажмите «Новая заметка», чтобы написать заметку.</string>
+    <string name="note_color">Изменить цвет</string>
+    <string name="note_draft">Переместить в черновики</string>
     <string name="note_hint">Текст</string>
     <string name="note_new">Новая заметка</string>
-    <string name="note_not_draft">Mark as not a draft</string>
+    <string name="note_not_draft">Переместить в ленту</string>
     <string name="note_remove">Удалить заметку</string>
     <string name="note_removed">Заметка удалена.</string>
-    <string name="note_star">Star</string>
+    <string name="note_star">Отметить</string>
     <string name="note_title_hint">Заголовок</string>
-    <string name="note_unstar">Unstar</string>
+    <string name="note_unstar">Снять отметку</string>
     <string name="prefcat_title_account">Учетная запись</string>
-    <string name="prefcat_title_reminder">Reminder</string>
-    <string name="prefcat_title_security">Security</string>
+    <string name="prefcat_title_reminder">Напоминания</string>
+    <string name="prefcat_title_security">Безопасность</string>
     <string name="prefcat_title_substitution">Автоматическая замена</string>
-    <string name="preference_summary_export">Save all your notes on external storage.</string>
+    <string name="preference_summary_export">Сохранить все заметки на карту памяти.</string>
     <string name="preference_summary_pin">We\'ll ask security passcode after 5 minutes of inactivity.</string>
-    <string name="preference_summary_reminder">Periodically remind you to write a note.</string>
-    <string name="preference_summary_substitution">Automatically replaces the sequence of characters with a single character.</string>
-    <string name="preference_title_enabled">Enabled</string>
-    <string name="preference_title_reminder_days">Days of week</string>
-    <string name="preference_title_reminder_time">Time</string>
-    <string name="preference_title_export">Export</string>
+    <string name="preference_summary_reminder">Напоминать добавить заметку.</string>
+    <string name="preference_summary_substitution">Автоматически заменять последовательности символов.</string>
+    <string name="preference_title_enabled">Включить</string>
+    <string name="preference_title_reminder_days">Дни недели</string>
+    <string name="preference_title_reminder_time">Время</string>
+    <string name="preference_title_export">Экспорт</string>
     <string name="preference_title_pin">Passcode protection</string>
-    <string name="preference_title_substitution_table">View replacement table</string>
+    <string name="preference_title_substitution_table">Таблица замены</string>
     <string name="prefkey_export">export</string>
     <string name="prefkey_pin_enabled">pin_enabled</string>
     <string name="prefkey_reminder_enabled">reminder_enabled</string>
@@ -48,15 +48,15 @@
     <string name="prefkey_reminder_time">reminder_time</string>
     <string name="prefkey_substitution_enabled">substitution_enabled</string>
     <string name="prefkey_substitution_table">substitution_table</string>
-    <string name="progress_title_export">Exporting</string>
+    <string name="progress_title_export">Экспорт</string>
     <string name="settings">Настройки</string>
     <string name="toast_cancelled">Отменено.</string>
     <string name="toast_export_finished" formatted="false">%s заметок сохранены в %s</string>
-    <string name="toast_export_nothing">Nothing to export.</string>
-    <string name="toast_note_drafted">Marked as a draft.</string>
-    <string name="toast_note_undrafted">Marked as not a draft.</string>
-    <string name="toast_starred">Starred.</string>
-    <string name="toast_unstarred">Unstarred.</string>
+    <string name="toast_export_nothing">Нет заметок.</string>
+    <string name="toast_note_drafted">Заметка перемещена в черновики.</string>
+    <string name="toast_note_undrafted">Заметка перемещена в ленту.</string>
+    <string name="toast_starred">Добавлена отметка.</string>
+    <string name="toast_unstarred">Отметка снята.</string>
     <string name="toast_storage_unready">External storage (memory card) is not ready.</string>
     <string name="activity_pin">Passcode Required</string>
     <string name="pin_required">Passcode</string>
@@ -67,10 +67,10 @@
     <string name="dialog_new_pin_title">New 4-digit passcode</string>
     <string name="pin_too_short">Passcode is too short.</string>
     <string name="pin_enabled">Passcode protection is enabled.</string>
-    <string name="note_set_custom_date">Set date and time</string>
-    <string name="note_reset_custom_date">Reset</string>
-    <string name="dialog_custom_date_title">Set date and time</string>
-    <string name="dialog_reminder_days_title">Reminder days</string>
+    <string name="note_set_custom_date">Изменить дату и время</string>
+    <string name="note_reset_custom_date">Сбросить</string>
+    <string name="dialog_custom_date_title">Изменить дату и время</string>
+    <string name="dialog_reminder_days_title">Дни недели</string>
     <string name="dialog_reminder_monday">Понедельник</string>
     <string name="dialog_reminder_tuesday">Вторник</string>
     <string name="dialog_reminder_wednesday">Среда</string>
