--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -2,7 +2,6 @@
 <resources>
     <string name="activity_note">Заметка</string>
     <string name="activity_settings">Настройки</string>
-    <string name="app_name">Miary</string>
     <string name="button_remove">Удалить</string>
     <string name="dialog_colorpicker_title">Цвет</string>
     <string name="dialog_remove_note_message">Удаленную заметку нельзя восстановить.</string>
@@ -32,22 +31,15 @@
     <string name="prefcat_title_security">Безопасность</string>
     <string name="prefcat_title_substitution">Автоматическая замена</string>
     <string name="preference_summary_export">Сохранить все заметки на карту памяти.</string>
-    <string name="preference_summary_pin">We\'ll ask security passcode after 5 minutes of inactivity.</string>
+    <string name="preference_summary_pin">Приложение будет запрашивать код доступа через 5 минут после выхода.</string>
     <string name="preference_summary_reminder">Напоминать добавить заметку.</string>
     <string name="preference_summary_substitution">Автоматически заменять последовательности символов.</string>
     <string name="preference_title_enabled">Включить</string>
     <string name="preference_title_reminder_days">Дни недели</string>
     <string name="preference_title_reminder_time">Время</string>
     <string name="preference_title_export">Экспорт</string>
-    <string name="preference_title_pin">Passcode protection</string>
+    <string name="preference_title_pin">Установить код доступа</string>
     <string name="preference_title_substitution_table">Таблица замены</string>
-    <string name="prefkey_export">export</string>
-    <string name="prefkey_pin_enabled">pin_enabled</string>
-    <string name="prefkey_reminder_enabled">reminder_enabled</string>
-    <string name="prefkey_reminder_days">reminder_days</string>
-    <string name="prefkey_reminder_time">reminder_time</string>
-    <string name="prefkey_substitution_enabled">substitution_enabled</string>
-    <string name="prefkey_substitution_table">substitution_table</string>
     <string name="progress_title_export">Экспорт</string>
     <string name="settings">Настройки</string>
     <string name="toast_cancelled">Отменено.</string>
@@ -57,16 +49,16 @@
     <string name="toast_note_undrafted">Заметка перемещена в ленту.</string>
     <string name="toast_starred">Добавлена отметка.</string>
     <string name="toast_unstarred">Отметка снята.</string>
-    <string name="toast_storage_unready">External storage (memory card) is not ready.</string>
-    <string name="activity_pin">Passcode Required</string>
-    <string name="pin_required">Passcode</string>
+    <string name="toast_storage_unready">Карта памяти не готова.</string>
+    <string name="activity_pin">Код доступа</string>
+    <string name="pin_required">Код доступа</string>
     <string name="app_subname">Личный дневник</string>
-    <string name="pin_incorrect">Incorrect passcode.</string>
-    <string name="dialog_current_pin_title">Current passcode</string>
-    <string name="pin_disabled">Passcode protection is disabled.</string>
+    <string name="pin_incorrect">Неверный код доступа.</string>
+    <string name="dialog_current_pin_title">Текущий код доступа</string>
+    <string name="pin_disabled">Защита отключена.</string>
     <string name="dialog_new_pin_title">New 4-digit passcode</string>
-    <string name="pin_too_short">Passcode is too short.</string>
-    <string name="pin_enabled">Passcode protection is enabled.</string>
+    <string name="pin_too_short">Код доступа слишком короткий.</string>
+    <string name="pin_enabled">Включена защита с помощью кода доступа.</string>
     <string name="note_set_custom_date">Изменить дату и время</string>
     <string name="note_reset_custom_date">Сбросить</string>
     <string name="dialog_custom_date_title">Изменить дату и время</string>
@@ -78,7 +70,7 @@
     <string name="dialog_reminder_friday">Пятница</string>
     <string name="dialog_reminder_saturday">Суббота</string>
     <string name="dialog_reminder_sunday">Воскресенье</string>
-    <string name="dialog_reminder_time_title">Reminder time</string>
+    <string name="dialog_reminder_time_title">Время</string>
     <string name="notification_reminder_content_text">Время что-нибудь написать.</string>
     <string name="preference_summary_reminder_never">Никогда</string>
 </resources>
