--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -64,7 +64,7 @@
     <string name="pin_incorrect">Incorrect passcode.</string>
     <string name="dialog_current_pin_title">Current passcode</string>
     <string name="pin_disabled">Passcode protection is disabled.</string>
-    <string name="dialog_new_pin_title">New 4-digit passcode</string>
+    <string name="dialog_new_pin_title">New passcode</string>
     <string name="pin_too_short">Passcode is too short.</string>
     <string name="pin_enabled">Passcode protection is enabled.</string>
     <string name="note_set_custom_date">Set date and time</string>
@@ -81,4 +81,5 @@
     <string name="dialog_reminder_time_title">Reminder time</string>
     <string name="notification_reminder_content_text">It\'s time to write something.</string>
     <string name="preference_summary_reminder_never">Never</string>
+    <string name="dialog_pin_hint">4-digit passcode</string>
 </resources>
