--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -15,7 +15,7 @@
     <string name="export_message_progress">Экспорт в %s</string>
     <string name="export_message_starting">Запуск…</string>
     <string name="export_writer_title_txt">простой текст</string>
-    <string name="feed_empty">Заметок нет.\nНажмите «Новая заметка», чтобы написать заметку.</string>
+    <string name="feed_empty">Коснитесь «Новая заметка», чтобы написать первую заметку.</string>
     <string name="note_color">Изменить цвет</string>
     <string name="note_draft">Переместить в черновики</string>
     <string name="note_hint">Текст</string>
@@ -56,7 +56,7 @@
     <string name="pin_incorrect">Неверный код доступа.</string>
     <string name="dialog_current_pin_title">Текущий код доступа</string>
     <string name="pin_disabled">Защита отключена.</string>
-    <string name="dialog_new_pin_title">New 4-digit passcode</string>
+    <string name="dialog_new_pin_title">Новый код доступа</string>
     <string name="pin_too_short">Код доступа слишком короткий.</string>
     <string name="pin_enabled">Включена защита с помощью кода доступа.</string>
     <string name="note_set_custom_date">Изменить дату и время</string>
@@ -73,4 +73,5 @@
     <string name="dialog_reminder_time_title">Время</string>
     <string name="notification_reminder_content_text">Время что-нибудь написать.</string>
     <string name="preference_summary_reminder_never">Никогда</string>
+    <string name="dialog_pin_hint">4 цифры</string>
 </resources>
