--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -82,4 +82,5 @@
     <string name="notification_reminder_content_text">It\'s time to write something.</string>
     <string name="preference_summary_reminder_never">Never</string>
     <string name="dialog_pin_hint">4-digit passcode</string>
+    <string name="note_fullscreen">Fullscreen</string>
 </resources>
